<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Bus Log</string>

    <string name="main_efab_add">Add</string>
    <string name="main_to">to</string>
    <string name="main_delete">Delete</string>
    <string name="main_delete_info">%1$s deleted.</string>
    <string name="main_delete_undo">Undo</string>
    <string name="main_menu_statistics">Statistics</string>
    <string name="main_menu_search">Search</string>
    <string name="main_coming_soon" translatable="false">Coming soon...</string>

    <string name="add_input_bus_number">Bus Number</string>
    <string name="add_input_bus_model">Model</string>
    <string name="add_input_bus_route_number">Route</string>
    <string name="add_input_bus_route_destination">Destination</string>
    <string name="add_input_create_date">Board Date</string>
    <string name="add_input_create_time">Board Time</string>
    <string name="add_input_note">Note</string>
    <string name="add_button_submit">Submit</string>
    <string name="add_edit">Edit</string>
    <string name="add_error">Error</string>
    <string name="add_error_entry_not_exist">This entry does not exist.</string>

    <string name="input_required">Required</string>
    <string name="input_optional">Optional</string>
</resources>